Update project setup and UI changes